# lambdabtc

./: .gitignore  README.md
backend/: backend.cabal  stack.yaml
backend/app/: Main.hs
backend/src/: .#Util.hs  BlockHeaders.hs  BloomFilter.hs  Inventory.hs  Keys.hs  Persistence.hs  Util.hs
backend/src/BitcoinCore/: BlockHeaders.hs  BloomFilter.hs  Inventory.hs  Keys.hs
backend/src/BitcoinCore/Transaction/: Optcodes.hs  Script.hs  Transactions.hs
backend/src/General/: Config.hs  Hash.hs  InternalMessaging.hs  Persistence.hs  Types.hs  Util.hs
backend/src/LamdaBTC/: Handlers.hs  Server.hs
backend/src/Protocol/: ConnectionM.hs  MessageBodies.hs  Messages.hs  Network.hs  Persistence.hs  Server.hs  Util.hs
backend/src/bitcoincore/: BlockHeaders.hs  BloomFilter.hs  Inventory.hs  Keys.hs  MerkleTrees.hs
backend/src/bitcoincore/transaction/: Optcodes.hs  Parser.hs  Script.hs  Transaction.hs  Transactions.hs
backend/src/general/: Config.hs  Hash.hs  InternalMessaging.hs  Persistence.hs  Types.hs  Util.hs
backend/src/lamdabtc/: Config.hs  Handlers.hs  Server.hs
backend/src/protocol/: ConnectionM.hs  MessageBodies.hs  Messages.hs  Network.hs  Parser.hs  Persistence.hs  Server.hs  Types.hs  Util.hs
backend/src/server/: Config.hs  Handlers.hs  Server.hs
backend/src/transaction/: Optcodes.hs  Parser.hs  Script.hs  Transaction.hs
backend/src/tx/: Parser.hs  Transaction.hs  Tx.hs  TxOut.hs
backend/src/tx/script/: Optcodes.hs  Script.hs
backend/test/: BlockHeaderTest.hs  KeyTest.hs  MessageTest.hs  ProtocolPersistenceTest.hs  ProtocolServerTest.hs  Spec.hs  TestUtil.hs  TransactionTest.hs  TxTest.hs
backend/test/BitcoinCore/: BlockHeadersTest.hs  KeysTest.hs
backend/test/BitcoinCore/Transaction/: ScriptTest.hs  TransactionsTest.hs
backend/test/Protocol/: MessagesTest.hs  PersistenceTest.hs  ServerTest.hs  UtilTest.hs
backend/test/bitcoincore/: BlockHeadersTest.hs  KeysTest.hs
backend/test/bitcoincore/transaction/: TransactionsTest.hs
backend/test/general/: TypesTest.hs  UtilTest.hs
backend/test/protocol/: MessagesTest.hs  PersistenceTest.hs  ServerTest.hs
frontend/: bower.json  index.html  main.js  package.json  renderer.js
frontend/src/: Main.purs  Overview.purs  RequestFunds.purs  Requests.purs  SendFunds.purs
haskell-app/: bower.json  index.html  package.json  renderer.js
haskell-app/src/: Main.purs  Overview.purs
