name:                backend
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/clample/backend#readme
license:             BSD3
license-file:        LICENSE
author:              Chris Lample
maintainer:          clample@crimson.ua.edu
copyright:           2017 Chris Lample
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
                     , src/server
                     , src/tx
                     , src/tx/script
                     , src/protocol
  exposed-modules:     Keys
                     , Persistence
                     , Server
                     , Server.Config
                     , Server.Handlers
                     , Script
                     , Optcodes
                     , Util
                     , TX
                     , TX.Parser
                     , Messages
                     , Protocol.Parser
  build-depends:       base >= 4.7 && < 5
                     , bytestring >= 0.10 && < 0.11
                     , cryptonite == 0.19
                     , base58string == 0.10.0
                     , word8 == 0.1.2
                     , base16-bytestring >= 0.1.1 && < 0.1.2
                     , text == 1.2.2.1
                     , persistent == 2.6
                     , persistent-sqlite == 2.6
                     , persistent-template == 2.5.1.6
                     , conduit == 1.2.8
                     , scotty ==0.11.*
                     , warp ==3.*
                     , data-default ==0.7.*
                     , mtl ==2.*
                     , wai ==3.2.*
                     , wai-extra ==3.0.*
                     , http-types ==0.9.*
                     , aeson >=0.7 && <0.12
                     , transformers == 0.5.*
                     , monad-logger ==0.3.*
                     , containers ==0.5.7.*
                     , asn1-encoding ==0.9.4
                     , megaparsec ==5.0.1
                     , lens ==4.14
                     , time ==1.6.*
                     , network ==2.6.3.1
  default-language:    Haskell2010

executable backend-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , backend
                     , bytestring >= 0.10 && < 0.11
                     , cryptonite == 0.19
                     , base58string == 0.10.0
                     , word8 == 0.1.2
                     , base16-bytestring >= 0.1.1 && < 0.1.2
                     , text == 1.2.2.1
                     , persistent == 2.6
                     , persistent-sqlite == 2.6
                     , persistent-template == 2.5.1.6
                     , scotty ==0.11.*
                     , warp ==3.*
                     , data-default ==0.7.*
                     , mtl ==2.*
                     , wai ==3.2.*
                     , wai-extra ==3.0.*
                     , http-types ==0.9.*
                     , aeson >=0.7 && <0.12
                     , transformers == 0.5.*
                     , monad-logger ==0.3.*
                     , lens ==4.14
  default-language:    Haskell2010

test-suite backend-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , backend
                     , test-framework
                     , test-framework-quickcheck2
                     , test-framework-hunit
                     , QuickCheck
                     , HUnit
                     , bytestring >= 0.10 && < 0.11
                     , cryptonite == 0.19
                     , base58string == 0.10.0
                     , word8 == 0.1.2
                     , base16-bytestring >= 0.1.1 && < 0.1.2
                     , text == 1.2.2.1
                     , megaparsec ==5.0.1
                     , lens ==4.14
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/clample/backend
