name:                backend
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/clample/backend#readme
author:              Chris Lample
maintainer:          clample@crimson.ua.edu
copyright:           2017 Chris Lample
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -fno-warn-unused-do-bind
  exposed-modules:     BitcoinCore.Keys
                     , General.Persistence
                     , General.Config
                     , General.Util
                     , General.Types
                     , General.InternalMessaging
                     , LamdaBTC.Server
                     , LamdaBTC.Handlers
                     , BitcoinCore.Transaction.Script
                     , BitcoinCore.Transaction.Optcodes
                     , BitcoinCore.Transaction.Transactions
                     , BitcoinCore.BlockHeaders
                     , BitcoinCore.BloomFilter
                     , BitcoinCore.Inventory
                     , Protocol.Messages
                     , Protocol.MessageBodies
                     , Protocol.Server
                     , Protocol.Network
                     , Protocol.Util
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck
                     , bytestring >= 0.10 && < 0.11
                     , cryptonite == 0.19
                     , cryptonite-openssl == 0.5
                     , base58string == 0.10.0
                     , word8 == 0.1.2
                     , base16-bytestring >= 0.1.1 && < 0.1.2
                     , text == 1.2.2.1
                     , persistent == 2.6
                     , persistent-sqlite == 2.6
                     , persistent-template == 2.5.1.6
                     , conduit == 1.2.8
                     , scotty ==0.11.*
                     , warp ==3.*
                     , data-default ==0.7.*
                     , mtl ==2.*
                     , wai ==3.2.*
                     , wai-extra ==3.0.*
                     , http-types ==0.9.*
                     , aeson >=0.7 && <0.12
                     , transformers == 0.5.*
                     , monad-logger ==0.3.*
                     , containers ==0.5.7.*
                     , asn1-encoding ==0.9.4
                     , megaparsec ==5.0.1
                     , lens ==4.14
                     , time ==1.6.*
                     , network ==2.6.3.1
                     , random ==1.1.*
                     , conduit-combinators ==1.0.8.*
                     , conduit-extra ==1.1.*
                     , binary ==0.8.3.*
                     , binary-conduit ==1.2.4.*
                     , stm-conduit ==3.0.*
                     , stm ==2.4.4.*
                     , memory ==0.13
                     , concurrent-extra == 0.7.*
                     , split ==0.2.3.*
                     , murmur3 == 1.0.*
                     , stm-chans ==3.0.0.*
  default-language:    Haskell2010

executable backend-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , backend
                     , bytestring >= 0.10 && < 0.11
                     , cryptonite == 0.19
                     , base58string == 0.10.0
                     , word8 == 0.1.2
                     , base16-bytestring >= 0.1.1 && < 0.1.2
                     , text == 1.2.2.1
                     , persistent == 2.6
                     , persistent-sqlite == 2.6
                     , persistent-template == 2.5.1.6
                     , scotty ==0.11.*
                     , warp ==3.*
                     , data-default ==0.7.*
                     , mtl ==2.*
                     , wai ==3.2.*
                     , wai-extra ==3.0.*
                     , http-types ==0.9.*
                     , aeson >=0.7 && <0.12
                     , transformers == 0.5.*
                     , monad-logger ==0.3.*
                     , lens ==4.14
  default-language:    Haskell2010

test-suite backend-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       BlockHeaderTest
                     , KeyTest
                     , MessageTest
                     , TestUtil
                     , TransactionTest
  build-depends:       base
                     , backend
                     , test-framework
                     , test-framework-quickcheck2
                     , test-framework-hunit
                     , QuickCheck
                     , HUnit
                     , bytestring >= 0.10 && < 0.11
                     , cryptonite == 0.19
                     , base58string == 0.10.0
                     , word8 == 0.1.2
                     , base16-bytestring >= 0.1.1 && < 0.1.2
                     , text == 1.2.2.1
                     , megaparsec ==5.0.1
                     , lens ==4.14
                     , time ==1.6.*
                     , binary ==0.8.3.*
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/clample/backend
